--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "docusaurus-plugin-search-local": "^2.1.2",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vibe-kanban-web-companion": "^0.0.5"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
