--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,16 +28,16 @@ jobs:
     name: Build Docusaurus
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v4 # 检出代码
+      - uses: pnpm/action-setup@v2 # 安装 pnpm
         with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v4
+          version: latest # 指定 pnpm 版本
+      - uses: actions/setup-node@v4 # 设置 Node.js
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm ci
+          node-version: '20' # 指定 Node.js 版本
+          cache: 'pnpm' # 自动缓存 pnpm 依赖
+      - name: Install Dependencies # 安装依赖
+        run: pnpm install --frozen-lockfile # 使用 --frozen-lockfile 确保一致性
 
       - name: Build website
         run: pnpm run build
